--- a/doc/agile/v1/sprint_backlog_01.org
+++ b/doc/agile/v1/sprint_backlog_01.org
@@ -13,16 +13,16 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-04-04 Tue 20:43]
+#+CAPTION: Clock summary at [2017-04-04 Tue 22:25]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *1:35* |      |      | 100.0 |
+| *Total time*                                                                | *1:48* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 1:35   |      |      | 100.0 |
-| Active                                                                      |        | 1:35 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:59 |  62.1 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:36 |  37.9 |
+| Stories                                                                     | 1:48   |      |      | 100.0 |
+| Active                                                                      |        | 1:48 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:59 |  54.6 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:49 |  45.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -34,6 +34,7 @@ Updates to sprint and product backlog.
 
 *** COMPLETED Edit release notes for previous sprint                  :story:
     CLOSED: [2017-04-03 Mon 11:07]
+    CLOCK: [2017-04-04 Tue 22:12]--[2017-04-04 Tue 22:25] =>  0:13
     CLOCK: [2017-04-03 Mon 10:48]--[2017-04-03 Mon 11:07] =>  0:19
     CLOCK: [2017-04-03 Mon 10:30]--[2017-04-03 Mon 10:47] =>  0:17
 
@@ -82,8 +83,8 @@ You can download experimental binaries from [Bintray](https://bintray.com/domain
 For all other architectures and/or operative systems, you will need to build Dogen from source. Source downloads are available below.
 #+end_src
 
-- [[https://twitter.com/MarcoCraveiro/status/843812829148954625][Tweet]]
-- [[https://www.linkedin.com/feed/update/urn:li:activity:6249579000297975808/][LinkedIn]]
+- [[https://twitter.com/MarcoCraveiro/status/849371311789019138][Tweet]]
+- [[https://www.linkedin.com/hp/update/6255137468270542848/][LinkedIn]]
 
 *** COMPLETED Replace the database model with the northwind model     :story:
     CLOSED: [2017-04-04 Tue 18:53]
